# atmorep-itwinai-plugin

./: .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  activate_env.sh  config.yaml  debug_trainer.py  jupyter.Dockerfile  pyproject.toml  slurm.jsc.sh
.github/linters/: .ruff.toml
.github/workflows/: pytest.yaml
src/itwinai/plugins/atmorep/: trainer.py
